@@ -101,6 +101,10 @@ All (Unix):
 - Return false from wxSingleInstanceChecker::IsAnotherRunning() if an error
   occurred while opening or reading the lock file (Lauri Nurmi).
 
+wxMSW:
+
+- Restored generation of events for accelerators when there is no menu bar.
+
 wxGTK:
 
 - Fixed printing to use fonts sizes adjustment consistent with wxMSW.
